reiser4includedir		= $(includedir)/reiser4

reiser4include_HEADERS		= reiser4.h filesystem.h format.h journal.h \
			          object.h alloc.h oid.h tree.h plugin.h node.h \
                                  key.h place.h master.h item.h factory.h param.h \
                                  types.h print.h fake.h status.h semantic.h flow.h

