reiser4includedir		= $(includedir)/reiser4

reiser4include_HEADERS		= libreiser4.h filesystem.h format.h journal.h \
				  object.h alloc.h oid.h tree.h backup.h \
				  plugin.h node.h key.h place.h master.h \
				  item.h factory.h profile.h types.h print.h \
				  pset.h fake.h status.h semantic.h flow.h \
				  debug.h

